Add CVA6 (32/64bit). Late retire support. Various fixes.
Late retire support: For app-class cores, track Issues/Retires to be able to handle control hazards
 with decoupled instructions and custom register writes.
-> Implement a scoreboard mechanism for custom registers.
Improvements to early write/read handling for custom registers (ZOL).

Various minor core-specific and general fixes / improvements.
More Javadoc.

Internal squash 3ffdbaf4ea35137d4fae6c22ef27f65f8855a795..976e9d5e24b501b0cbbe17bb1493dbb11d0810a4